spices/thread-pool/tests/compile-fail/forgotten-stop.tur
;; EXPECT: TUR-E0100  (linear Pool dropped without pool-stop)
(defmodule cf-forgotten-stop
  (import thread-pool/pool :refer [Pool pool-new pool-submit])
  (defn main [] : int
    (let [p (pool-new 2 (fn [x : int] : void nil))]
      (do (pool-submit p 1) 0))))   ;; never pool-stop -> linear drop
